import React from 'react';
import { shallow } from 'enzyme';
import 'jest-styled-components';

describe('Cart', () => {
  it('renders', () => {});

  it('Should tell when cart is empty', () => {});

  it('render items from cart', () => {});

  it('render total amount in cart', () => {});

  it('Should remove items from cart', () => {});
});
